docdir = $(datadir)/doc/$(PACKAGE)-$(VERSION)

doc_DATA = README.file_format \
	README.serial_port \
	README.protocol \
	README.usb \
	README.file_format-S610 \
	README.610.file_format \
	README.osx

EXTRA_DIST = README.file_format \
	README.serial_port \
	README.protocol \
	README.usb \
	README.file_format-S610 \
	README.610.file_format \
	README.osx
