bin_PROGRAMS = s710d s710sh srdcat srdhead srdplot srd2hrm srdmerge

INCLUDES = -I$(top_srcdir)/include
CFLAGS = @CFLAGS@ -Wall

s710d_SOURCES = s710d.c

s710d_LDADD = $(top_srcdir)/src/libs710/libs710.la @LDFLAGS@ @PROG_LIBS@

s710sh_SOURCES = s710sh.c

s710sh_LDADD = $(top_srcdir)/src/libs710/libs710.la @LDFLAGS@ @PROG_LIBS@

srdcat_SOURCES = srdcat.c

srdcat_LDADD = $(top_srcdir)/src/libs710/libs710.la @LDFLAGS@ @PROG_LIBS@

srdhead_SOURCES = srdhead.c

srdhead_LDADD = $(top_srcdir)/src/libs710/libs710.la @LDFLAGS@ @PROG_LIBS@

srdplot_SOURCES = srdplot.c

srdplot_LDADD = $(top_srcdir)/src/libs710/libs710.la @LDFLAGS@ @PROG_LIBS@

srd2hrm_SOURCES = srd2hrm.c

srd2hrm_LDADD = $(top_srcdir)/src/libs710/libs710.la @LDFLAGS@ @PROG_LIBS@

srdmerge_SOURCES = srdmerge.c

srdmerge_LDADD = $(top_srcdir)/src/libs710/libs710.la @LDFLAGS@ @PROG_LIBS@
